Fix header title text alignment

--- a/src/web/AddRidePage.sass
+++ b/src/web/AddRidePage.sass
@@ -63,7 +63,7 @@
   width: 24px !important
 
 .headerTitle
-  margin-left: 20px
+  margin-left: 12px
   flex: 1
 
 .createButton
